# vulncore

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
api/: go.mod  go.sum  main.go
api/bridge/: rust_ffi.go
api/db/: sqlite.go
api/handlers/: auth.go  dashboard.go  export.go  handlers_test.go  reports.go  scan.go
api/middleware/: auth.go
api/scheduler/: cron.go
api/webhooks/: sender.go
configs/: vulncore.service  vulncore.toml
scanner/: Cargo.toml
scanner/src/: cve_matcher.rs  lib.rs  main.rs  models.rs  pkg_reader.rs  port_scanner.rs  service_detector.rs  tests.rs
web/: index.html  login.html
web/assets/css/: hacker.css
web/assets/js/: hacker.js
