[package]
name = "vulncore-scanner"
version = "0.1.0"
edition = "2021"
description = "VulnCore - High-performance vulnerability scanner engine"
license = "MIT"

[[bin]]
name = "vulncore-scanner"
path = "src/main.rs"

[lib]
name = "scanner"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
socket2 = "0.5"
dns-lookup = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
